working through more content tune-ups, almost there!

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
 <footer class="footer">
-    <a href="https://quobix.com/about">Dave Shanley</a> 2007-2021
+    <a href="{{ .Site.BaseURL }}author">Dave Shanley</a> 2007-2021
     <span class="generated-timestamp">[generated {{ dateFormat "02/01/06 15:04 MST" .Date.Local }}]</span>
 </footer>
