--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -7,7 +7,7 @@
                <div class="article-strapline">
                     <em>{{ .Params.strapline }}</em>
                </div>
-               <hr />
+               <hr class="article-title-divider"/>
                <section class="article-body">
                     {{ if (isset .Params "hero")}}
                     <figure>
