--- a/layouts/shortcodes/image-grid-item.html
+++ b/layouts/shortcodes/image-grid-item.html
@@ -1,5 +1,6 @@
 {{ $img := .Page.Resources.GetMatch (.Get 0)}}
+{{ $thumb := $img.Resize "285x" }}
 <figure class="image-grid-item">
-	<a href="{{ $img.RelPermalink }}"><img src="{{ $img.RelPermalink }}" title="{{ .Get 1 }}" alt="{{ .Get 2 }}" /></a>
+	<a href="{{ $img.RelPermalink }}"><img src="{{ $thumb.RelPermalink }}" width="285px" title="{{ .Get 1 }}" alt="{{ .Get 2 }}" /></a>
 	<figcaption>{{ .Get 1 }}</figcaption> 
 </figure> 
