--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -49,18 +49,16 @@
 <meta property="og:url" content="{{ .Permalink }}" />
 <meta property="og:site_name" content="{{ $.Site.Title }}" />
 <meta property="og:image" content="{{ .Params.hero | absURL }}">
-<meta property="og:image:width" content="1400">
-<meta property="og:image:height" content="680">
+<meta property="og:image:width" content="960">
+<meta property="og:image:height" content="467">
+<meta property="og:image:secure_url" content="{{ .Params.hero | absURL }}" />
+<meta property="og:image:type" content="image/png" />
+<meta property="og:image:alt" content="{{ .Params.heroAlt }}" />
+<meta property="og:article:author" content="Dave Shanley" />
+<meta property="og:article:section" content="Software" />
+<meta property="og:article:published_time" content="{{ time .Date }}" />
 
 <!-- twitter meta data -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@daveshanley">
 <meta name="twitter:creator" content="@daveshanley">
-
-
-{{- range .Params.categories }}
-<meta property="article:section" content="{{ . }}" />
-{{ end }}
-{{- if isset .Params "date" }}
-<meta property="article:published_time" content="{{ time .Date }}" />
-{{ end }}
