cleaned up some UX issues, added new header GFX
added google tag manager

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -42,7 +42,7 @@
 <link rel="stylesheet" href="{{ .Site.BaseURL }}assets/syntax.css" />
 <link rel="stylesheet" href="{{ .Site.BaseURL }}assets/app.css" />
 <!-- OG data -->
-<meta property="og:locale" content="en" />
+<meta property="og:locale" content="en_US" />
 <meta property="og:type" content="{{ if .IsPage }}article{{ else }}website{{ end }}" />
 <meta property="og:title" content="{{ if .IsHome }}{{ $.Site.Title }}{{ else }}{{ .Title }}{{ end }}">
 <meta property="og:description" content="{{ if .IsHome }}{{ $.Site.Params.Subtitle }}{{ else if .Description}}{{ .Description | plainify }}{{ else }}{{ .Summary | plainify }}{{ end }}" />
