added home og images

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 <div class="main-container">
     <main class="content-container">
         <article class="framed-content">
-            <h1 class="list-title">code is art.</h1>
+            <h1 class="list-title">{{ .Title}}</h1>
            {{ partial "latest" .}}
         </article>
     </main>
