--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -9,6 +9,14 @@
 <meta name="author" content="Dave Shanley">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>{{ block "title" . }}{{ if .IsHome }}{{ .Site.Title }}: code is art{{ else }}quobix: {{ .Title }}{{ end }}{{ end }}</title>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-PC979K2');</script>
+    <!-- End Google Tag Manager -->
+    
 <script src="{{ .Site.BaseURL }}assets/bundle.js"></script>
 <style>
     :root {
@@ -45,7 +53,7 @@
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="{{ if .IsPage }}article{{ else }}website{{ end }}" />
 <meta property="og:title" content="{{ if .IsHome }}{{ $.Site.Title }}{{ else }}{{ .Title }}{{ end }}">
-<meta property="og:description" content="{{ if .IsHome }}{{ $.Site.Params.Subtitle }}{{ else if .Description}}{{ .Description | plainify }}{{ else }}{{ .Summary | plainify }}{{ end }}" />
+<meta property="og:description" content="{{ if .Description }}{{ .Description | plainify }}{{ else }}{{ .Summary | plainify }}{{ end }}" />
 <meta property="og:url" content="{{ .Permalink }}" />
 <meta property="og:site_name" content="{{ $.Site.Title }}" />
 <meta property="og:image" content="{{ .Params.hero | absURL }}">
