--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -62,9 +62,13 @@
 <meta property="og:image:secure_url" content="{{ .Params.hero | absURL }}" />
 <meta property="og:image:type" content="image/png" />
 <meta property="og:image:alt" content="{{ .Params.heroAlt }}" />
-<meta property="og:article:author" content="Dave Shanley" />
-<meta property="og:article:section" content="Software" />
-<meta property="og:article:published_time" content="{{ time .Date }}" />
+<meta property="article:author" content="https://quobix.com" />
+<meta property="article:publisher" content="https://quobix.com" />
+<meta property="article:section" content="Software" />
+<meta property="article:published_time" content="{{ time .Date }}" />
+<meta property="article:modified_time" content="{{ time .Date }}" />
+
+
 
 <!-- twitter meta data -->
 <meta name="twitter:card" content="summary_large_image">
