--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -71,8 +71,11 @@
 
 
 
-
 <!-- twitter meta data -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@daveshanley">
 <meta name="twitter:creator" content="@daveshanley">
+<meta name="twitter:label1" content="Written by" />
+<meta name="twitter:data1" content="Dave Shanley" />
+<meta name="twitter:label2" content="Reading time" />
+<meta name="twitter:data2" content="{{ math.Round (div (countwords .Content) 220.0) }} minutes" />
