Added trashbox article.

--- a/static/assets/app.css
+++ b/static/assets/app.css
@@ -582,5 +582,9 @@ hr.article-title-divider {
     .article-body {
         margin-top: 50px;
     }
+
+    li {
+        margin-bottom: 30px;
+    }
     
 }
