Added marvin article
cleaned up homepage a little also.

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -12,7 +12,7 @@
                     <figure>
                          <img src="{{ .Site.BaseURL }}{{ .Params.heroSVG }}" alt="{{ .Params.heroAlt }}">
                          <figcaption>
-                              {{ .Params.heroTitle }}
+                              {{ .Params.heroTitle | markdownify }}
                          </figcaption>
                     </figure>
                     {{end}}
