--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,8 +2,12 @@
 <div class="main-container">
     <main class="content-container">
         <article class="framed-content">
-            <h1 class="list-title">{{ .Title}}</h1>
+            <img src="/images/quobix-homepage.png" alt="quobix logo" title="quobix logo" width="800" class="homepage-logo"  />
+
+            <h1 class="list-title homepage-title">{{ .Title}}</h1>
+            
            {{ partial "latest" .}}
+           <p><a href="{{ ref . "articles" }}">Read more articles &gt;</a></p>
         </article>
     </main>
 </div>
