Added meta header for charset.

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -2,7 +2,8 @@
 <link rel="apple-touch-icon" sizes="180x180" href="{{ .Site.BaseURL }}/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="{{ .Site.BaseURL }}favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="{{ .Site.BaseURL }}favicon-16x16.png">
-<meta name="description" content="quobix.com, home of dave shanley">
+<meta name="description" content="quobix.com, home of Dave Shanley">
+<meta charset="UTF-8">
 <meta name="keywords" content="dave shanley, shanley, code, golang, java, typescript, quobix, engineer">
 <!-- use creds whilst protected -->
 <link crossorigin="use-credentials" rel="manifest" href="{{ .Site.BaseURL }}site.webmanifest" />
