--- a/layouts/author/single.html
+++ b/layouts/author/single.html
@@ -8,7 +8,7 @@
                </div>
                <hr class="about-header-divider" />
                <div class="profile-crop">
-                    <img src="{{ .Site.BaseURL }}images/about/dave-shanley-headshot.jpg" height="220" width="220"
+                    <img src="{{ .Site.BaseURL }}images/about/dave-shanley-profile-2022.png" height="220" width="220"
                          class="profile-shot" alt="a profile picture of Dave Shanley" title="Dave Shanley" />
                </div>
                <section class="about-body">
