--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -44,6 +44,7 @@
         --input-style: solid;
         --display-h1-decoration: none;
         --bold-text: #e397fa;
+        --terminal-green: #00FF00FF;
         --hrcolor: #3d3d3d;
         --code-border: #525252;
     }
