--- a/assets/app.css
+++ b/assets/app.css
@@ -28,6 +28,17 @@ body {
 
 }
 
+.homepage-logo {
+    width: 500px;
+    margin: 0 auto;
+    display: block;
+}
+
+.homepage-title {
+    text-align: center;
+    display:block;
+}
+
 #main-navigation {
     overflow-y: hidden;
     position: relative;
@@ -74,7 +85,7 @@ body {
 
 
 .content-container h1.article-title {
-    font-size: 30px;
+    font-size: 50px;
     word-spacing: -4px;
     margin-top: 0;
     padding-top: 0;
@@ -116,7 +127,7 @@ h1.list-title {
 }
 
 .article-body {
-    margin-top: 60px;
+    margin-top: 100px;
 }
 
 .article-body h2, h3, h4 {
@@ -133,6 +144,42 @@ h1.list-title {
 }
 .article-body  h4 {
     font-size: 1em !important;
+}
+
+.article-list-body {
+    padding-right: 5px;
+}
+
+p.codesplit {
+    border-left: 1px dashed var(--hrcolor);
+    display: block;
+    padding-left: 20px;
+    color: var(--tertiary-color);
+    margin-top: -30px;
+    margin-bottom: -30px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-style: italic;
+}
+
+
+.highlight pre {
+   
+    border: none;
+    border-left: 2px solid var(--secondary-color);
+    padding: 10px 0 10px 20px;
+    margin-top: 30px;
+    margin-bottom: 30px; 
+}
+
+pre code {
+    display: inline;
+}
+
+.terminal-alert .highlight pre {
+    margin-top: 0;
+    margin-bottom: 0;
+    border-left: 2px solid var(--secondary-color);
 }
 
 figcaption h4 {
@@ -154,7 +201,7 @@ hr.article-footer-divider {
 }
 
 .article-strapline, .about-strapline em {
-    font-size: 20px;
+    font-size: 25px; 
     color: var(--tertiary-color)
 }
 
@@ -163,13 +210,13 @@ hr.article-footer-divider {
 }
 
 .article-strapline, .article-strapline em {
-    font-size: 20px;
+    font-size: 25px;
     color: var(--tertiary-color)
 }
 
 .framed-content {
     margin: 0 auto;
-    padding: 10px;
+    /* padding: 10px; */
     /* width: 50rem; */
     display: block;
 }
@@ -191,12 +238,7 @@ hr.article-footer-divider {
     padding: 3px;
 }
 
-.highlight pre {
-    border: none;
-    padding: 5px 0 0 5px;
-    margin-top: 30px;
-    margin-bottom: 30px; 
-}
+
 
 .menu-item .active {
     background-color: var(--secondary-color);
@@ -293,14 +335,36 @@ figure>figcaption {
 
 /*boxes */
 .terminal-alert {
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 .warning-box {
     border: 1px solid rgb(255, 217, 0);
     color: rgb(255, 217, 0);
-    
 }
+
+.success-box {
+    border: 1px solid var(--terminal-green);
+    color: var(--terminal-green);
+}
+
+/* box overrides */
+.terminal-alert-error strong {
+    color: var(--error-color);
+}
+
+.terminal-alert-primary strong {
+    color: var(--primary-color);
+}
+
+.warning-box strong {
+    color: rgb(255, 217, 0);
+}
+
+.success-box strong {
+    color: var(--terminal-green);
+}
+
 
 /* interesting things (list of things) */
 
@@ -308,8 +372,8 @@ ul.page-list {
     /* display: flex;
     flex-flow: row wrap; */
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 365px));
-    grid-gap: 2rem;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 355px));
+    grid-gap: 10px;
     list-style: none; 
     list-style-type: none;    
 }
@@ -353,7 +417,7 @@ ul.page-list>li {
 
 .latest-page-item h2 {
     margin-top: 10px;
-    font-size: 20px;
+    font-size: 25px;
     margin-bottom: 20px;
 }
 
@@ -429,7 +493,7 @@ li.page-list-item sub {
     height: 220px;
     position: relative;
     overflow: hidden;
-    border-radius: 50%;
+    border-radius: 10%;
     margin-right: 50px;
     margin-bottom: 50px;
     float: left;
@@ -494,9 +558,32 @@ hr.article-title-divider {
     margin-bottom: 5px;
 }
 
+section.article-body p code, section.article-body div.terminal-alert code {
+    border: 1px solid #1a681a;
+    padding: 1px 5px 1px 5px;
+    border-radius: 5px;
+    color: #03ff0d;
+        background-color: #29d33014;
+}
+
+section.article-body p code::before, section.article-body div.terminal-alert code::before  {
+    content: none;
+}
+
+section.article-body p code::after, section.article-body div.terminal-alert code::after  {
+    content: none;
+}
+
+
 /** mobile stuff */
 
 @media only screen and (max-width: 600px) {
+
+    .homepage-logo {
+        width: 370px;
+    }
+    
+
     .generated-timestamp {
         display: none;
     }
@@ -506,13 +593,17 @@ hr.article-title-divider {
 
     figure {
         width: 100vw !important;
-        margin-left: -20px!important;
+        margin-left: -10px!important;
     }
 
     .quobix-header {
         max-width: 95vw;
         width: 95vw;
         
+    }
+
+    article-body {
+        margin-top: 60px;
     }
 
     .content-container {
@@ -523,7 +614,10 @@ hr.article-title-divider {
     .container, .container-fluid {
         min-width: 100px;
     }
-
+    .content-container h1.article-title {
+        font-size: 30px;
+    }
+    
     .page-item {
         width: 320px !important;
     }
@@ -539,7 +633,10 @@ hr.article-title-divider {
     }
     
     
-  
+    ul.page-list {
+        display: block;
+    
+    }
     .framed-content hr {
         margin: 50px auto 50px auto
     }
@@ -586,5 +683,22 @@ hr.article-title-divider {
     li {
         margin-bottom: 30px;
     }
+
+    li.page-list-item {
+        max-width: 100%;
+    }
+
+    code {
+        font-size: 11px !important;
+    }
+
+    .highlight {
+        margin-left: -10px;
+    }
+
+    .codesplit {
+        margin-left: -10px;
+    }
+
     
 }
