fixed footer timestamp

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
 <footer class="footer">
     <a href="{{ .Site.BaseURL }}author">Dave Shanley</a> 2007-2022
-    <span class="generated-timestamp">[generated {{ dateFormat "02/01/06 15:04 MST" .Date.Local }}]</span>
+    <span class="generated-timestamp">[generated {{ now.Format "02/01/06 15:04 MST" }}]</span>
 </footer>
