Building out vacuum documentation
A new section in our IA, with a new specialized look for our vacuum docs.

Signed-off-by: Dave Shanley <dave@quobix.com>

--- a/layouts/partials/vacuum/header.html
+++ b/layouts/partials/vacuum/header.html
@@ -7,10 +7,10 @@
             <ul itemscope="" itemtype="http://schema.org/BreadcrumbList">
                 {{- $current := . }}
                 {{- range $k, $v := .Site.Menus.main }}
-                {{- $active := eq .Name $current.Name}}
+                {{ $active := or ($current.IsMenuCurrent "main" .) ($current.HasMenuCurrent "vacuum" .) }}
                 <li itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">
-                    <a href="{{ $v.URL }}" itemprop="item" class="menu-item {{ if $current.IsMenuCurrent "main" . }}active{{end}}">
-                        <span itemprop="name" class="{{ if $current.IsMenuCurrent "main" . }}active{{end}}">{{ $v.Name}}</span>
+                    <a href="{{ $v.URL }}" itemprop="item" class="menu-item {{ if $active }}active{{end}}">
+                        <span itemprop="name" class="{{ if $active }}active{{end}}">{{ $v.Name}}</span>
                         <meta itemprop="position" content="{{ add $k 1 }}">
                     </a>
                 </li>
