--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -21,7 +21,7 @@
                <hr />
                <nav class="go-back-parent-link">
                     <a href="{{ .Parent.RelPermalink }}">&lt; Back to {{ .Parent.Title}}</a>
-               </fnav>
+               </nav>
           </article>
      </main>
 </div>
