New vacuum docs are coming together.
Added a new mobile view and a cusrtom hamburger menu. Now it just needs content!

--- a/static/assets/vacuum.css
+++ b/static/assets/vacuum.css
@@ -1,21 +1,28 @@
-/*body {*/
-/*    !*--page-width: 99vw;*!*/
-/*}*/
 
 .content-container {
-    display: grid;
-    grid-template-columns: 180px 8fr;
-    grid-template-rows: 1fr;
-    grid-column-gap: 0;
-    grid-row-gap: 0;
+    display: flex;
 }
 
+.vacuum-title {
+    font-size: 1.4rem;
+    color: var(--secondary-color);
+}
+
+.vacuum-sep {
+    font-size: 1.4rem;
+    color: var(--tertiary-color);
+}
+
+
 .vacuum-navigation {
-    grid-area: 1 / 1 / 2 / 2;
+    width: 150px;
     border-right: 1px dashed var(--secondary-color);
     margin-right: 20px;
 }
-.vacuum-content { grid-area: 1 / 2 / 2 / 3; }
+.vacuum-content {
+  width: 60%;
+    flex-grow: 2;
+}
 
 .vacuum-navigation-items {
     margin-top: 0;
@@ -30,6 +37,10 @@
     color: var(--invert-font-color);
 }
 
+.active-section a {
+    color: var(--invert-font-color);
+}
+
 .article-body {
     margin-top: 20px;
 }
@@ -40,3 +51,109 @@
     border-bottom: none;
     margin: 40px auto 40px auto;
 }
+
+.table-of-contents {
+    position: fixed;
+    width: 200px;
+    /*right: 0;*/
+    margin-left: 20px;
+    padding-left: 20px;
+    border-left: dashed 1px var(--tertiary-color);
+}
+
+.right-nav {
+    min-width: 150px;
+}
+
+.table-of-contents ul > li {
+    font-size: var(--toc-font-size);
+}
+
+.table-of-contents p {
+    color: var(--tertiary-color);
+    font-size: var(--toc-font-header-size);
+}
+
+/* mobile experience */
+
+
+/** mobile stuff */
+
+mobile-nav {
+    display: none;
+}
+
+ul.mobile-nav {
+    margin: 0;
+    padding: 0;
+}
+
+li.mobile-nav {
+    margin: 0;
+    padding: 0;
+}
+
+li.mobile-nav::after {
+    content: "";
+}
+
+.article-body h2 {
+    margin-top: 80px;
+}
+
+@media only screen and (max-width: 600px) {
+
+    mobile-nav {
+        display: block;
+        transition: top 0.3s;
+        transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+        /*border: 1px dashed var(--secondary-color);*/
+        /*height: 40px;*/
+        /*border-radius: 5px;*/
+        /*width: 40px;*/
+        /*position: absolute;*/
+        /*top: 10px;*/
+        /*right: 10px;*/
+        /*z-index: 1;*/
+    }
+
+    mobile-nav.hide {
+        top: -185px;
+        /*border: 1px dashed var(--secondary-color);*/
+        /*height: 40px;*/
+        /*border-radius: 5px;*/
+        /*width: 40px;*/
+        /*position: absolute;*/
+        /*top: 10px;*/
+        /*right: 10px;*/
+        /*z-index: 1;*/
+    }
+
+
+
+    .quobix-header {
+        height: initial;
+    }
+    #header-menu {
+        display: none;
+    }
+    .main-container {
+        margin-top: 0;
+    }
+
+    .vacuum-navigation {
+      display:none;
+    }
+
+
+
+    .table-of-contents {
+        display: none;
+    }
+
+    .right-nav {
+       display: none;
+    }
+
+}
+
