--- a/layouts/vacuum/single.html
+++ b/layouts/vacuum/single.html
@@ -2,9 +2,11 @@
 <div class="main-container">
     <main class="content-container">
         {{ partial "vacuum/navigation" . }}
+
         <section class="vacuum-content">
 
             <article class="framed-content">
+
                 <h1 class="article-title">{{.Title}}</h1>
                 <div class="article-strapline">
                     <em>{{ .Params.strapline }}</em>
@@ -21,9 +23,15 @@
                     {{.Content}}
                 </section>
             </article>
-
-
         </section>
+        {{- if gt .WordCount 200 -}}
+        <div class="right-nav">
+            <asisde class="table-of-contents">
+                <p>What's on this page</p>
+                {{ .TableOfContents }}
+            </asisde>
+        </div>
+        {{- end -}}
     </main>
 </div>
 {{end}}
