--- a/static/assets/app.css
+++ b/static/assets/app.css
@@ -6,6 +6,20 @@ body {
     word-spacing: -0.1rem;
 }
 
+body::-webkit-scrollbar {
+    width: 8px;
+}
+
+body::-webkit-scrollbar-track {
+    background-color: var(--invert-font-color);
+}
+
+body::-webkit-scrollbar-thumb {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background: var(--secondary-color-lowalpha);
+}
+
+
 .container, .container-fluid {
     margin: 0 auto;
     /* padding: 0 calc(var(--global-space) * 2); */
@@ -48,6 +62,7 @@ body {
 .logo a {
     font-size: 1.4rem;
 }
+
 
 #top-nav-divider {
     margin-top: 0px;
