Working through various vacuum navigation rendering issues
thinking through the correct IA, and then making hugo render it correctly.

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -23,6 +23,8 @@
     :root {
         --global-font-size: 17px;
         --toc-font-size: 0.7rem;
+        --childnav-font-size: 0.85rem;
+        --nav-font-size: 0.95rem;
         --toc-font-header-size: 0.85rem;
         --global-line-height: 1.4em;
         --global-space: 10px;
@@ -34,6 +36,9 @@
             serif;
         --background-color: #0d1117;
         --background-color-alpha: rgba(13, 17, 23, 0.80);
+        --navigation-hover: #b685ff33;
+        --navigation-child-selected: rgba(182, 133, 255, 0.26);
+        --navigation-child-container: rgba(182, 133, 255, 0.10);
         --page-width: 65em;
         --font-color: #e8e9ed;
         --invert-font-color: #222225;
