Working through layouts for rules list pages.
breaking things down into components, having fun with this experience.

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -26,6 +26,7 @@
         --childnav-font-size: 0.85rem;
         --nav-font-size: 0.95rem;
         --toc-font-header-size: 0.85rem;
+        --rule-item-fontsize: 1.9rem;
         --global-line-height: 1.4em;
         --global-space: 10px;
         --font-stack: Menlo, Monaco, Lucida Console, Liberation Mono,
@@ -36,6 +37,8 @@
             serif;
         --background-color: #0d1117;
         --background-color-alpha: rgba(13, 17, 23, 0.80);
+        --rule-item-background: rgba(26, 32, 44, 0.51);
+        --rule-item-border: rgba(35, 43, 58, 0.9);
         --navigation-hover: #b685ff33;
         --navigation-child-selected: rgba(182, 133, 255, 0.26);
         --navigation-child-container: rgba(182, 133, 255, 0.10);
