Added new components for rule list pages.
I think it looks pretty nice. Lots of room for feature growth, filtering, sorting spring to mind.

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -26,18 +26,25 @@
         --childnav-font-size: 0.85rem;
         --nav-font-size: 0.95rem;
         --toc-font-header-size: 0.85rem;
-        --rule-item-fontsize: 1.9rem;
+        --rule-item-header-fontsize: 1.2rem;
+        --rule-item-details-fontsize: 0.8rem;
+        --rule-format-fontsize: 0.8rem;
+        --rule-type-fontsize: 0.7rem;
+        --rule-severity-fontsize: 0.8rem;
+        --rule-recommended-fontsize: 0.7rem;
         --global-line-height: 1.4em;
         --global-space: 10px;
-        --font-stack: Menlo, Monaco, Lucida Console, Liberation Mono,
+        --font-stack: Menlo, Monaco, Roboto Mono, Lucida Console, Liberation Mono,
             DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace,
             serif;
-        --mono-font-stack: Menlo, Monaco, Lucida Console, Liberation Mono,
+        --mono-font-stack: Menlo, Monaco, Roboto Mono, Lucida Console, Liberation Mono,
             DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace,
             serif;
         --background-color: #0d1117;
         --background-color-alpha: rgba(13, 17, 23, 0.80);
         --rule-item-background: rgba(26, 32, 44, 0.51);
+        --rule-recommended-background: rgb(33, 41, 55);
+        --rule-stats-background: #0a0a0a;
         --rule-item-border: rgba(35, 43, 58, 0.9);
         --navigation-hover: #b685ff33;
         --navigation-child-selected: rgba(182, 133, 255, 0.26);
@@ -51,6 +58,8 @@
         --primary-color: rgba(98, 196, 255, 1.0);
         --primary-color-lowalpha: rgba(98, 196, 255, 0.6);
         --error-color: #ff3c74;
+        --error-font-color: #ff246b;
+        --error-color-lowalpha: rgba(255, 60, 116, 0.4);
         --progress-bar-background: #3f3f44;
         --progress-bar-fill: #62c4ff;
         --code-bg-color: none;
@@ -58,6 +67,7 @@
         --display-h1-decoration: none;
         --bold-text: #e397fa;
         --terminal-green: #00FF00FF;
+        --terminal-yellow: #fddb00;
         --hrcolor: #3d3d3d;
         --code-border: #525252;
 
