Added breadcumb navigation

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -23,6 +23,7 @@
     :root {
         --global-font-size: 17px;
         --toc-font-size: 0.7rem;
+        --breadcrumb-font-size: 0.75rem;
         --childnav-font-size: 0.85rem;
         --nav-font-size: 0.95rem;
         --toc-font-header-size: 0.85rem;
@@ -34,6 +35,8 @@
         --rule-recommended-fontsize: 0.7rem;
         --global-line-height: 1.4em;
         --global-space: 10px;
+        --vacuum-navigation-width-v: 199px;
+        --vacuum-navigation-width: 200px;
         --font-stack: Menlo, Monaco, Roboto Mono, Lucida Console, Liberation Mono,
             DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace,
             serif;
