Rules page, rules list and all rules page templates are in.
Now content can go in!

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -33,6 +33,9 @@
         --rule-type-fontsize: 0.7rem;
         --rule-severity-fontsize: 0.8rem;
         --rule-recommended-fontsize: 0.7rem;
+        --rule-recommended-banner-fontsize: 1rem;
+        --rule-panel-label: 0.7rem;
+        --rule-id-fontsize: 2rem;
         --global-line-height: 1.4em;
         --global-space: 10px;
         --vacuum-navigation-width-v: 199px;
@@ -57,6 +60,9 @@
         --invert-font-color: #222225;
         --secondary-color: #b685ff;
         --secondary-color-lowalpha: rgba(182, 133, 255, 0.73);
+        --secondary-color-very-lowalpha: rgba(182, 133, 255, 0.23);
+        --secondary-color-shadow: rgb(59, 41, 87);
+        --secondary-color-shadow-mid: rgb(78, 54, 114);
         --tertiary-color: #a3abba;
         --primary-color: rgba(98, 196, 255, 1.0);
         --primary-color-lowalpha: rgba(98, 196, 255, 0.6);
