--- a/static/assets/vacuum.css
+++ b/static/assets/vacuum.css
@@ -44,6 +44,8 @@
     padding-left: 10px;
     line-height: 1.4rem;
     margin-bottom: 20px;
+    background-color: var(--background-color);
+    z-index: 2;
 }
 
 .breadcrumbs > ul {
@@ -52,6 +54,7 @@
     display: flex;
     flex-wrap: wrap;
     align-items: baseline;
+    color: var(--tertiary-color);
 }
 
 .breadcrumbs > ul > li {
@@ -60,6 +63,13 @@
     padding-left: 0;
     margin-right: 0px;
 }
+
+.breadcrumbs > ul > li.crumb-active a {
+    color: var(--secondary-color);
+    font-style: italic;
+
+}
+
 
 .breadcrumbs > ul > li + li:before {
     content: ">";
@@ -121,6 +131,10 @@ li.child-nav a:hover {
     margin: 40px auto 40px auto;
 }
 
+h1.rule-id {
+    display: block;
+}
+
 .table-of-contents {
     position: fixed;
     width: 200px;
@@ -143,10 +157,62 @@ li.child-nav a:hover {
     font-size: var(--toc-font-header-size);
 }
 
+
+.rule-breakdown-panel {
+    display: flex;
+    width:100%;
+    margin-bottom: 20px;
+}
+
+hr.rule-breakdown-hr {
+    margin: 10px 0 10px 0;
+}
+
+h1.rule-id {
+    font-size: var(--rule-id-fontsize);
+    padding-top: 0;
+}
+
+rule-panel {
+    flex-grow: 1;
+}
+rule-panel span {
+    font-size: var(--rule-panel-label);
+    color: var(--tertiary-color);
+}
+
+h1.rules-list-title {
+    padding-top: 0;
+    font-size: var(--rule-id-fontsize);
+}
+
+rule-panel formats-panel,severity-panel,style-panel {
+    width: 80%;
+    border: none;
+    padding: 0;
+    margin-top: 0;
+}
+
+.rule-breakdown-panel span {
+    display: block;
+}
+
+.rule-footer-navigation nav {
+    display: flex;
+}
+
+.rule-footer-navigation nav span {
+  flex-grow: 1;
+    font-size: var(--rule-item-details-fontsize);
+}
+
+section.rule-details {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    font-size: 1rem;
+}
+
 /* mobile experience */
-
-
-/** mobile stuff */
 
 mobile-nav {
     display: none;
@@ -170,35 +236,46 @@ li.mobile-nav::after {
     margin-top: 80px;
 }
 
+.rule-category-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.rule-category {
+    width: 32%;
+    padding-bottom: 18%; /* 32:18, i.e. 16:9 */
+    margin-bottom: 2%; /* (100-32*3)/2 */
+}
+
+
+.rule-category-title {
+    margin-top: 0;
+    padding-top: 0;
+    margin-bottom: 10px;
+    font-size: 1.2em !important;
+    border-bottom: 1px dashed var(--secondary-color-lowalpha);
+    padding-bottom: 10px;
+}
+
+.rule-category-description {
+    font-size: var(--rule-item-details-fontsize);
+    color: var(--tertiary-color);
+}
+
+/* mobile */
+
 @media only screen and (max-width: 600px) {
 
     mobile-nav {
         display: block;
         transition: top 0.3s;
         transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
-        /*border: 1px dashed var(--secondary-color);*/
-        /*height: 40px;*/
-        /*border-radius: 5px;*/
-        /*width: 40px;*/
-        /*position: absolute;*/
-        /*top: 10px;*/
-        /*right: 10px;*/
-        /*z-index: 1;*/
     }
 
     mobile-nav.hide {
         top: -185px;
-        /*border: 1px dashed var(--secondary-color);*/
-        /*height: 40px;*/
-        /*border-radius: 5px;*/
-        /*width: 40px;*/
-        /*position: absolute;*/
-        /*top: 10px;*/
-        /*right: 10px;*/
-        /*z-index: 1;*/
     }
-
-
 
     .quobix-header {
         height: initial;
@@ -214,8 +291,6 @@ li.mobile-nav::after {
       display:none;
     }
 
-
-
     .table-of-contents {
         display: none;
     }
@@ -223,6 +298,20 @@ li.mobile-nav::after {
     .right-nav {
        display: none;
     }
+
+    .breadcrumbs {
+        border: none;
+        margin-top: -65px;
+        padding-left: 0;
+        height: 10px;
+    }
+
+
+    h1.rule-id {
+        padding-top: 0;
+    }
+
+
 
 }
 
