--- a/layouts/partials/vacuum/breadcrumb.html
+++ b/layouts/partials/vacuum/breadcrumb.html
@@ -10,7 +10,7 @@
 {{ end }}
 {{ if not (eq .p1.RelPermalink "/") }}
 <li{{ if eq .p1 .p2 }} class="crumb-active"{{ end }}>
-  <a href="{{ .p1.Permalink }}">{{ .p1.Title }}</a>
+  <a href="{{ .p1.Permalink }}">{{ .p1.LinkTitle }}</a>
 </li>
 {{end}}
 {{ end }}
