Rule section is in.
New rules section is in. now to test a little and pick up some usability issues. and we're ready for content!

--- a/layouts/vacuum/list.html
+++ b/layouts/vacuum/list.html
@@ -6,7 +6,7 @@
             {{ partial "vacuum/breadcrumb" . }}
 
             <h1 class="rules-list-title">{{ .Title}}</h1>
-            {{ .Content }}
+            <section class="rules-list-content">{{ .Content | markdownify }}</section>
             <hr>
             {{ if .Params.showList }}<section class="list">
 
